2003-01-08  Jim Meyering  <jim@meyering.net>

	* full-write.c: Undefine and define-away `const' after inclusion
	of errno.h, not before.  Suggestion from Bruno Haible.

2003-01-07  Jim Meyering  <jim@meyering.net>

	* full-write.c: Rework so that it may serve to define full_read, too.
	* full-read.c: Simply #define FULL_READ and include full-write.c.

2003-01-06  Jim Meyering  <jim@meyering.net>

	* version-etc.c: Update year in translatable copyright string.

2002-12-25  Bruno Haible  <bruno@clisp.org>

	* strtoimax.c: Include <stdint.h> as an alternative to <inttypes.h>.
	* xstrtol.h: Likewise.
	* xstrtoimax.c: Likewise.
	* xstrtoumax.c: Likewise.
	* human.h: Likewise.

	* tempname.c: Include <inttypes.h> too. Avoids a compilation error
	on systems that have <inttypes.h> but not <stdint.h>.

2002-12-31  Paul Eggert  <eggert@twinsun.com>

	* memcoll.c (memcoll): Fall back on a simple algorithm using
	memcmp if strcoll doesn't work.

2002-12-23  Bruno Haible  <bruno@clisp.org>

	* localcharset.h: New file.
	* localcharset.c: Include it.
	* unicodeio.c: Likewise.

2002-12-22  Bruno Haible  <bruno@clisp.org>

	* utime.c (utime_null): No need to call ftruncate if the file was
	nonempty.

2002-12-23  Bruno Haible  <bruno@clisp.org>

	* memcoll.c (STRCOLL): New macro.
	(memcoll): Use it.

2002-12-22  Bruno Haible  <bruno@clisp.org>

	* getstr.h (getstr): Define, to avoid clash with libcurses.
	* linebuffer.h (readline): Define, to avoid clash with libreadline.

2002-12-22  Bruno Haible  <bruno@clisp.org>

	* getdate.y (get_date): Test HAVE_STRUCT_TM_TM_ZONE, not HAVE_TM_ZONE.

2002-12-23  Bruno Haible  <bruno@clisp.org>

	* getline.h: Include <stddef.h>, for size_t.

	* unicodeio.h: Include <stddef.h>, for size_t.
	* unicodeio.c: Don't include <stddef.h>.

2002-12-17  Bruno Haible  <bruno@clisp.org>

	* canon-host.c (strdup): Remove unused declaration.

	* fsusage.c: Include full_read.h.
	(get_fs_usage): Use full_read instead of safe_read.
