@@ -1,3 +1,9 @@
+2003-01-08  Bruno Haible  <bruno@clisp.org>
+
+	* safe-read.c: Include specification header first, to ensure its
+	selfcontainedness.
+	* full-write.c: Likewise.
+
 2003-01-08  Jim Meyering  <jim@meyering.net>
 
 	* full-write.c: Undefine and define-away `const' after inclusion
